--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
   <h1>Benvenuto al Team Building 2025</h1>
   <button onclick="location.href='checkin.html'">🔐 Check-in Partecipanti</button>
   <button class="dashboard" onclick="location.href='dashboard.html'">📊 Dashboard Organizzatori</button>
+  <button style="background-color: #9c27b0;" onclick="location.href='admin.html'">🛠️ Admin</button>
 </body>
 </html>
