--- a/dashboard.html
+++ b/dashboard.html
@@ -65,6 +65,7 @@
         <th onclick="sortTable(1)">Nome</th>
         <th>Check-in</th>
         <th>Orario</th>
+        <th>Telefono</th>
         <th>Azione</th>
       </tr>
     </thead>
@@ -109,6 +110,7 @@
           <td>${p.nome}</td>
           <td>${p.checkin ? '✅' : '❌'}</td>
           <td>${p.timestamp || '-'}</td>
+          <td><a href="tel:${p.telefono}">${p.telefono}</a></td>
           <td>
             ${p.checkin ? `<button class="delete" onclick="deleteCheckin('${p.id}', '${activity}')">Cancella</button>` : ''}
           </td>
