--- a/admin.html
+++ b/admin.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <h1>Admin Team Building 2025</h1>
-
+  <button onclick="location.href='index.html'" style="background-color: #9e9e9e; margin-bottom: 1rem;">🏠 Torna alla Home</button>
   <section>
     <h2>Aggiungi Partecipante</h2>
     <input id="nome" placeholder="Nome" />
