--- a/checkin.html
+++ b/checkin.html
@@ -71,6 +71,7 @@
 </head>
 <body>
   <h1>Check-in NFC</h1>
+  <button onclick="location.href='index.html'" style="background-color: #9e9e9e; margin-bottom: 1rem;">🏠 Torna alla Home</button>
   <p>Seleziona l'attività e avvicina il tag NFC</p>
 
   <select id="activity">
